@@ -147,4 +147,11 @@ UpdateInfoBoxStartOpen(InfoBoxData &data);
 void
 UpdateInfoBoxStartOpenArrival(InfoBoxData &data);
 
+class InfoBoxContentNextArrow: public InfoBoxContent
+{
+public:
+  virtual void Update(InfoBoxData &data) override;
+  virtual void OnCustomPaint(Canvas &canvas, const PixelRect &rc) override;
+};
+
 #endif
